Feat: add is_include_value
